<resources>
    <string name="app_name">AkhbariApp</string>
    <string name="akhbar_i">AKHBAR\'i</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ? \t</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="national_id">National ID</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="Inbox">Inbox</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="search">Search</string>
    <string name="health">Health</string>
    <string name="sport">Sport</string>
    <string name="transport">Transport</string>
    <string name="politics">Politics</string>
    <string name="people">People</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="past">Past</string>
    <string name="posttitle">Manhattan Bridge</string>
    <string name="read_more"><![CDATA[Read more >]]></string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="education">Education</string>
    <string name="post">Post</string>
    <string name="title_here">Title</string>
    <string name="content">Content</string>
    <string name="admin_code">Admin Code</string>
    <string name="you_are_an_admin">You are an admin ?</string>
    <string name="add_your_city">Add your city</string>
    <string name="addi_mage">addi mage</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_message">Compose message</string>
    <string name="message">Message</string>
    <string name="back">back</string>
    <string name="send">Send</string>
    <string name="city">City</string>
    <string name="log_out">Log out</string>
    <string name="corona_diagnosis">Corona Diagnosis</string>
    <string name="coronavirus_health_helpline">CORONAVIRUS HEALTH HELPLINE</string>
    <string name="ministry_of_health"><![CDATA[Ministry of Health & Prevention at 800–111. \nEstijaba service 800–177. \nDubai Health Authority at 800–334.]]></string>
    <string name="helpline_for_mental_health">HELPLINE FOR MENTAL HEALTH</string>
    <string name="_04_5192519">04–5192519</string>
    <string name="technical_helping_for_distant_n_learning">TECHNICAL HELPING FOR DISTANT\n LEARNING</string>
    <string name="tags">Tags</string>
    <string name="image">Image</string>

    <string-array name="Cities">
        <item>Oran</item>
        <item>Algiers</item>
        <item>Tiaret</item>
        <item>Tiziwezou</item>
        <item>Chlef</item>
        <item>Blida</item>
    </string-array>

</resources>
