<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="50dp"
    android:paddingStart="50dp"
    android:background="#0F084B">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akhbar_i"
        android:textSize="38sp"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#FFF" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#FFF"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="#FFF"
        android:textSize="14sp"
        android:backgroundTint="#FFF"/>
</LinearLayout>