<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:padding="10dp"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">


        <TextView
            android:id="@+id/message_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/corona_diagnosis"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/message_read_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/read_more"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/message_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/message_time"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/date"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/time"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>