<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:elevation="10dp"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="194dp" />

            <RelativeLayout
                android:id="@+id/post_item_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0F084B"
                android:orientation="vertical"
                android:layout_below="@+id/post_image">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFF"/>
                <TextView
                    android:id="@+id/post_title"
                    android:paddingTop="22dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:text="@string/posttitle"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/roboto_mono"
                    android:textSize="16sp" />

                <TextView
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:id="@+id/post_read_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_below="@+id/post_title"
                    android:layout_marginTop="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="9dp"
                    android:layout_below="@+id/post_read_more">

                    <TextView
                        android:id="@+id/post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_toEndOf="@+id/post_time"
                        android:text="@string/date"
                        android:fontFamily="@font/roboto_mono"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:id="@+id/post_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:fontFamily="@font/roboto_mono"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />


                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/card_view"
        android:background="@drawable/shadow" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_above="@id/card_view"
        android:background="@drawable/shadow" />

    <View
        android:layout_width="7dp"
        android:layout_height="310dp"
        android:layout_toStartOf="@+id/card_view"
        android:background="@drawable/shadow" />

    <View
        android:layout_width="7dp"
        android:layout_height="310dp"
        android:layout_toEndOf="@+id/card_view"
        android:background="@drawable/shadow" />

</RelativeLayout>