<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFF"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/to"
        android:inputType="number"
        android:textColor="#FFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/subject"
            android:inputType="text"
            android:textColor="#FFF" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:layout_marginTop="10dp"
        android:textColorHint="#FFF">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFF"
            android:fontFamily="@font/roboto_thin"
            android:background="@android:color/transparent"
            android:gravity="top|left"
            android:hint="@string/compose_message"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="40"
            android:minLines="30"
            android:scrollbarThumbVertical="@drawable/custom_scroll_style"
            android:scrollbars="vertical"
            android:textColor="#FFF"
            tools:ignore="RtlHardcoded" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_container"
        android:elevation="7dp"
        android:layout_marginBottom="16dp"
        tools:ignore="RelativeOverlap">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="7dp"
            android:layout_gravity="end"
            android:backgroundTint="#FFF"
            app:srcCompat="@drawable/ic_send_black_18dp"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>