<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="276dp">

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:background="@drawable/ic_add_a_photo_black_24dp"
                    android:contentDescription="@string/addi_mage" />

                <ImageView
                    android:id="@+id/post_image_center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:background="@drawable/ic_image_black_24dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/shadow_for_toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="60"
                    android:textColorHint="#FFF">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_thin"
                        android:hint="@string/title_here"
                        android:inputType="textAutoComplete"
                        android:textColor="#FFF" />
                </com.google.android.material.textfield.TextInputLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/city_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:background="@android:color/transparent"
                    app:ms_arrowColor="#FFF"
                    app:ms_floatingLabelColor="@color/colorAccent"
                    app:ms_floatingLabelText="City"
                    app:ms_hint="City"
                    app:ms_hintColor="#FFF" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/shadow_for_toolbar" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#FFF">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#000"
                    android:fontFamily="@font/roboto_thin"
                    android:gravity="top|left"
                    android:hint="@string/content"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:maxLines="20"
                    android:background="@android:color/transparent"
                    android:minLines="8"
                    android:scrollbarThumbVertical="@drawable/custom_scroll_style"
                    android:scrollbars="vertical"
                    android:textColor="#FFF"
                    tools:ignore="RtlHardcoded" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="bottom"
        android:background="@drawable/round_button"
        android:elevation="7dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/post"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
